--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,7 +22,7 @@
       color: white;
   }
   .portfolio {
-    height: 170vh;
+    height: 110vh;
     background-color: rgba(0,0,0,0.4);
     color: white;
   }
@@ -60,7 +60,13 @@
   .card-content, .card-action {
       background-color: black !important;
   }
-
+@media screen and (max-width: 992px) {
+  .portfolio {
+    height: 170vh;
+    background-color: rgba(0,0,0,0.4);
+    color: white;
+  }
+}
   @media screen and (max-width: 750px) {
     .section {
 
