--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,11 +18,10 @@
     font-size: 1.2em !important;
   }
   .section {
-      height: 100vh;
+      height: 110vh;
       background-color: rgba(0,0,0,0.4);
       color: white;
   }
- 
   .brand-logo {
     width: 70px;
   }
@@ -61,6 +60,7 @@
   }
   .card-content, .card-action {
       background-color: black !important;
+      color: white !important;
   }
 
   @media screen and (max-width: 750px) {
