--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,7 +18,7 @@
     font-size: 1.2em !important;
   }
   .section {
-      height: 110vh;
+      height: 120vh;
       background-color: rgba(0,0,0,0.4);
       color: white;
   }
@@ -66,11 +66,18 @@
   @media screen and (max-width: 750px) {
     .section {
 
-        height: 100vh;
+        height: 140vh;
         background-color: rgba(0,0,0,0.4);
         color: white;
     }
    
+  }
+  @media screen and (max-width: 600px) {
+    .section {
+      height: 180vh;
+      background-color: rgba(0,0,0,0.4);
+      color: white;
+    }
   }
 
   @media screen and (max-width: 440px) {
