container size toggle control on window width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,8 +75,9 @@ border-top: rgb(74, 56, 0) 1px solid;
     color: rgb(255, 179, 0);
 }
 .navcolor {
-    background-color: rgba(0, 0, 0, 0.3) !important;
+    background-color: rgba(0, 0, 0, 0) !important;
     position: sticky;
+    padding-left: 10px;
 }
 .index-text {
     font-size: 5vh;
@@ -114,7 +115,7 @@ height: 100vh;
     padding: 10%;
     background-color: rgba(0,0,0,0.3);
 }
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 500px) {
     .container {
         padding: 0px !important;
     }
